--- a/app/src/main/res/layout/tasks_recycler.xml
+++ b/app/src/main/res/layout/tasks_recycler.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.5">
 
         <TextView
-            android:id="@+id/textTarefa"
+            android:id="@+id/textTask"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Tarefa"
@@ -32,7 +32,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textIdTarefa"
+            android:id="@+id/textIdTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
@@ -40,7 +40,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textTarefa"
+            app:layout_constraintTop_toBottomOf="@+id/textTask"
             app:layout_constraintVertical_bias="0.5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
