--- a/app/src/main/res/layout/activity_list_tasks.xml
+++ b/app/src/main/res/layout/activity_list_tasks.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presetation.ui.activity.ListarTarefasActivity">
+    tools:context=".presetation.ui.activity.ListTasksActivity">
 
     <include
-        android:id="@+id/includeToolbar"
+        android:id="@+id/includeListToolbar"
         layout="@layout/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTarefas"
+        android:id="@+id/rvTasks"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="10dp"
@@ -25,11 +25,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/includeToolbar"
+        app:layout_constraintTop_toBottomOf="@+id/includeListToolbar"
         app:layout_constraintVertical_bias="0.5" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAddTarefa"
+        android:id="@+id/fabAddTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -43,14 +43,14 @@
         app:tint="@color/white" />
 
     <ImageView
-        android:id="@+id/imageSemNotas"
+        android:id="@+id/imageNoNotes"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/includeToolbar"
+        app:layout_constraintTop_toBottomOf="@+id/includeListToolbar"
         app:srcCompat="@drawable/sem_notas" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
