--- a/app/src/main/res/layout/activity_edit_tasks.xml
+++ b/app/src/main/res/layout/activity_edit_tasks.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutTextEditTask"
+        android:id="@+id/clEditTask"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -35,6 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="56dp"
             android:hint="titulo aqui"
+            android:inputType="text|textCapSentences"
             android:singleLine="false"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -50,12 +51,55 @@
             android:ems="10"
             android:gravity="start|top"
             android:hint="nota aqui"
-            android:inputType="textMultiLine"
+            android:inputType="text|textCapSentences|textMultiLine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextEditTaskTitle" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <ToggleButton
+                android:id="@+id/btnEditBold"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="B"
+                android:textOn="B"
+                android:textOff="B"
+                android:textStyle="bold"
+                android:textColor="@drawable/button_checked_toggle"/>
+
+            <ToggleButton
+                android:id="@+id/btnEditItalic"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="I"
+                android:textOn="I"
+                android:textOff="I"
+                android:textStyle="italic"
+                android:textColor="@drawable/button_checked_toggle"/>
+
+            <ToggleButton
+                android:id="@+id/btnEditSub"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="S"
+                android:textOn="S"
+                android:textOff="S"
+                android:textColor="@drawable/button_checked_toggle"/>
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -67,6 +111,8 @@
         android:layout_marginBottom="24dp"
         android:clickable="true"
         android:contentDescription="Esse é o botão para salvar"
+        app:backgroundTint="?attr/colorPrimary"
+        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_save_toolbar" />
