--- a/app/src/main/res/layout/activity_list_tasks.xml
+++ b/app/src/main/res/layout/activity_list_tasks.xml
@@ -36,12 +36,12 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
-        android:tint="@color/primaria"
-        app:backgroundTint="@color/primaria"
+        android:contentDescription="Botão de adicionar nota"
+        app:backgroundTint="?attr/colorPrimary"
+        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add_task_24"
-        app:tint="@color/white" />
+        app:srcCompat="@drawable/ic_add_task_24" />
 
     <ImageView
         android:id="@+id/imageNoNotes"
