Função alterar entre tema escuro e claro adicionada no app

--- a/app/src/main/res/layout/activity_edit_tasks.xml
+++ b/app/src/main/res/layout/activity_edit_tasks.xml
@@ -74,10 +74,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="B"
-                android:textOn="B"
+                android:textColor="@drawable/button_checked_toggle"
                 android:textOff="B"
-                android:textStyle="bold"
-                android:textColor="@drawable/button_checked_toggle"/>
+                android:textOn="B"
+                android:textStyle="bold" />
 
             <ToggleButton
                 android:id="@+id/btnEditItalic"
