--- a/app/src/main/res/layout/tasks_recycler.xml
+++ b/app/src/main/res/layout/tasks_recycler.xml
@@ -11,6 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:foreground="@drawable/ripple_color_item"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
