--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
     <style name="Base.Theme.NotesSimple" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
 
         <item name="colorPrimary">@color/primaria_dark</item>
-        <item name="colorSecondary">@color/secundaria_dark</item>
+        <item name="colorSecondary">@color/secundaria</item>
+        <item name="colorOnPrimary">@color/primaria</item>
+        <item name="colorOnSecondary">@color/cinza</item>
     </style>
 </resources>
