--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
     <style name="Base.Theme.NotesSimple" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/primaria</item>
-        <item name="colorSecondary">@color/secundaria</item>
+        <item name="colorOnPrimary">@color/primaria</item>
+        <item name="colorOnSecondary">@color/cinza</item>
+        <item name="colorSecondary">@color/secundaria_dark</item>
+        <item name="colorSurface">@color/purple</item>
+        <item name="colorOnSurface">@color/green</item>
+        <item name="background">@color/white</item>
         <item name="actionOverflowButtonStyle">@style/style.toolbar</item>
 
     </style>
