--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,5 +19,7 @@
         </item>
     </style>
 
-    <style name="Theme.NotesSimple" parent="Base.Theme.NotesSimple" />
+    <style name="Theme.NotesSimple" parent="Base.Theme.NotesSimple">
+        <item name="fontFamily">@font/roboto</item>
+    </style>
 </resources>
