--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,31 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="500"
+    android:viewportHeight="500">
+  <group android:scaleX="0.58"
+      android:scaleY="0.58"
+      android:translateX="105"
+      android:translateY="105">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M113.4,43.5c-15.9,5 -27.2,18.5 -29.5,35.2 -0.6,4.2 -0.8,73.7 -0.7,176.3 0.3,157.6 0.4,169.9 2,174.6 3.8,10.8 13.7,21.1 25.1,25.8 5.1,2.1 6.3,2.1 72.5,2.4l67.2,0.3 0,-20.6 0,-20.5 -62.5,-0 -62.5,-0 0,-167 0,-167 73,-0 73,-0 0,52 0,52 52,-0 52,-0 0,21 0,21 21,-0 21,-0 0,-30.8 0,-30.7 -62.8,-62.8 -62.7,-62.7 -87,0.1c-67.7,0.1 -87.9,0.4 -91.1,1.4z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M187.2,107c-3.4,1.4 -4.8,5.8 -2.9,9.2 1.5,2.6 1.4,2.9 -4.9,11.7 -3.5,4.9 -6.9,9.3 -7.5,9.7 -0.6,0.3 -3.9,-0.7 -7.4,-2.2 -5.6,-2.5 -6.4,-3.2 -6.5,-5.7 0,-3.6 -3.3,-6.7 -7,-6.7 -3.4,-0 -7,3 -7,5.9 0,2.6 3.8,7.1 6,7.1 2.1,-0 2.1,0.1 5,18.5 1.1,7.1 2.3,14.2 2.6,15.7l0.6,2.8 31.9,-0 31.9,-0 0.4,-2.3c0.3,-1.2 1.5,-8.3 2.6,-15.7 3,-19.5 2.9,-19 5,-19 2.6,-0 6,-3.8 6,-6.7 0,-3.2 -3.4,-6.3 -7,-6.3 -3.7,-0 -7.3,3.6 -6.7,6.7 0.4,1.9 -0.5,2.7 -6.1,5.3 -3.6,1.7 -7.1,2.9 -7.7,2.6 -0.7,-0.2 -4.2,-4.6 -7.8,-9.7 -6.1,-8.6 -6.5,-9.5 -5.1,-11 1.7,-1.9 1.2,-7 -0.9,-8.7 -2,-1.6 -5.1,-2.1 -7.5,-1.2zM201.2,144.2l4,5.6 5.5,-2.4c3.1,-1.4 5.8,-2.3 6,-2 0.3,0.2 -0.1,4.4 -0.9,9.3l-1.3,8.8 -24.2,0.3 -24.3,0.2 -0.5,-2.2c-1.1,-4.8 -2.6,-16.1 -2.2,-16.5 0.3,-0.2 2.9,0.7 6,2.1l5.5,2.4 7.7,-10.5 7.7,-10.6 3.5,4.9c1.9,2.7 5.3,7.4 7.5,10.6z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M158,184.5l0,4.5 32,-0 32,-0 0,-4.5 0,-4.5 -32,-0 -32,-0 0,4.5z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M163.1,200.3c3.3,1.7 5,3.5 6.9,7.2l2.5,5 0,49.5c0,27.2 -0.4,51.6 -0.8,54.2 -1,5.8 -4.6,10.4 -10.2,12.9 -4,1.8 -3.9,1.9 27.9,1.9l32,-0 -5.1,-2.5c-10.1,-5.1 -10.4,-6.7 -10.1,-54l0.3,-37.9 34,47.2 33.9,47.2 29.5,-0 29.5,-0 -5.5,-2.8c-9.9,-5 -9.4,-1.8 -9.7,-61.5 -0.2,-33.5 0.1,-53.1 0.8,-55.6 1.3,-5 4.3,-8.7 8.8,-11.1l3.7,-1.9 -30.5,-0 -30.5,-0 4.2,2.1c2.5,1.1 5.2,3.5 6.5,5.7 2.3,3.6 2.3,3.9 2.6,45.6 0.2,23 0,41.6 -0.4,41.2 -0.4,-0.3 -15.8,-21.7 -34.4,-47.4l-33.6,-46.8 -28.4,-0.3 -28.4,-0.2 4.5,2.3z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M417,273.2c-5,1.9 -10.7,7.2 -65.1,61.2l-59.7,59.1 -0.1,32.2 -0.1,32.3 31.8,-0 31.7,-0.1 58.7,-58.3c66.7,-66.2 64.3,-63.3 64.3,-78.1 0,-11.7 -3.1,-16.8 -19.8,-33.3 -11.2,-10.9 -14.1,-13.2 -19,-15 -7.3,-2.8 -15.4,-2.8 -22.7,-0zM374.3,395.2l-31.8,31.8 -9.7,-0 -9.8,-0 0,-9.7 0,-9.8 31.7,-31.7 31.8,-31.8 9.7,9.7 9.8,9.8 -31.7,31.7z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+  </group>
 </vector>
