--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,9 +14,7 @@
     </style>
 
     <style name="style.toolbar" parent="@style/Widget.AppCompat.ActionButton.Overflow">
-        <item name="tint">
-            @color/white
-        </item>
+        <item name="tint">@color/white</item>
     </style>
 
     <style name="Theme.NotesSimple" parent="Base.Theme.NotesSimple">
